# pythia

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  demo.ipynb  pyproject.toml
pythia/: __init__.py  data_generation.py  models.py  visualization.py
pythia/data_generation/: __init__.py
pythia/demo/: __init__.py  demo_images.npy  demo_positions.npy  demo_velocities.npy
pythia/demo/data/: collisionless_positions.npy  collisionless_velocities.npy  train_test_images.npy  train_test_positions.npy  train_test_velocities.npy
pythia/demo/models/: memoryless_decoder.h5  memoryless_decoder.weights.h5  memoryless_encoder.weights.h5  model.weights.h5
